add Decin reference

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -309,8 +309,8 @@ known detections include the carbon star envelope IRC +10216
 \citep{Highberger2003a}, and the oxygen-rich evolved star envelopes of VY Canis
 Majoris and IK Tauri \citep{Milam2007a}. To our knowledge, \sourcei is only the
 fifth astronomical source in which KCl and NaCl have been detected.
-The only previous detection of vibrationally excited NaCl was of the v=1
-line in IRC+10216 \citep{Quintana-Lacaci2016a}, 
+The only previous detections of vibrationally excited NaCl were of the v=1
+line in IRC+10216 \citep{Quintana-Lacaci2016a} and VY CMa \citep{Decin2016a}, 
 % (\citealt{Agundez2012a} presented the most systematic study of salt lines, 
 %which only included detections of v=0 rotational transitions),
 while \sourcei exhibits clear emission up to v=6 in both NaCl and KCl.
@@ -798,7 +798,7 @@ outflow \citep{Hirota2017a}.
 
 In this scenario,  NaCl and KCl molecules are sputtered from the grains.  The
 most plausible means to achieve the energies required to sputter grains is with
-strong shocks \citep{Schilke1997a}.  In
+strong shocks \citep{Schilke1997a,Decin2016a}.  In
 \sourcei, it seems unlikely that there would be very strong shocks in the disk,
 but there are high-velocity shocks throughout the outflow. Strong SiO emission
 is observed in the inner part of the outflow (i.e., within $<100$ AU of
