add Decin section

--- a/extracted.bib
+++ b/extracted.bib
@@ -813,6 +813,87 @@
   eid =           {192},
 }
 
+@article{Decin2016a,
+  author =        {{Decin}, L. and {Richards}, A.~M.~S. and
+                   {Millar}, T.~J. and {Baudry}, A. and {De Beck}, E. and
+                   {Homan}, W. and {Smith}, N. and {Van de Sande}, M. and
+                   {Walsh}, C.},
+  journal =       {\aap},
+  month =         jul,
+  pages =         {A76},
+  title =         {{ALMA-resolved salt emission traces the chemical
+                   footprint and inner wind morphology of VY Canis
+                   Majoris}},
+  volume =        {592},
+  year =          {2016},
+  abstract =      {Context. At the end of their lives, most stars lose a
+                   significant amount of mass through a stellar wind.
+                   The specific physical and chemical circumstances that
+                   lead to the onset of the stellar wind for cool
+                   luminous stars are not yet understood. Complex
+                   geometrical morphologies in the circumstellar
+                   envelopes prove that various dynamical and chemical
+                   processes are interlocked and that their relative
+                   contributions are not easy to disentangle. Aims: We
+                   aim to study the inner-wind structure (R< 250 R*) of
+                   the well-known red supergiant VY CMa, the archetype
+                   for the class of luminous red supergiant stars
+                   experiencing high mass loss. Specifically, the
+                   objective is to unravel the density structure in the
+                   inner envelope and to examine the chemical
+                   interaction between gas and dust species. Methods: We
+                   analyse high spatial resolution (~0.̋24×0.̋13)
+                   ALMA science verification (SV) data in band 7, in
+                   which four thermal emission lines of gaseous sodium
+                   chloride (NaCl) are present at high signal-to-noise
+                   ratio. Results: For the first time, the NaCl emission
+                   in the inner wind region of VY CMa is spatially
+                   resolved. The ALMA observations reveal the
+                   contribution of up to four different spatial regions.
+                   The NaCl emission pattern is different compared to
+                   the dust continuum and TiO2 emission already analysed
+                   from the ALMA SV data. The emission can be reconciled
+                   with an axisymmetric geometry, where the lower
+                   density polar/rotation axis has a position angle of
+                   ~50$\,^{\circ}$ measured from north to east. However,
+                   this picture cannot capture the full morphological
+                   diversity, and discrete mass ejection events need to
+                   be invoked to explain localized higher-density
+                   regions. The velocity traced by the gaseous NaCl line
+                   profiles is significantly lower than the average wind
+                   terminal velocity, and much slower than some of the
+                   fastest mass ejections, signalling a wide range of
+                   characteristic speeds for the mass loss. Gaseous NaCl
+                   is detected far beyond the main dust condensation
+                   region. Realising the refractory nature of this metal
+                   halide, this hints at a chemical process that
+                   prevents all NaCl from condensing onto dust grains.
+                   We show that in the case of the ratio of the surface
+                   binding temperature to the grain temperature being
+                   ~50, only some 10% of NaCl remains in gaseous form
+                   while, for lower values of this ratio, thermal
+                   desorption efficiently evaporates NaCl.
+                   Photodesorption by stellar photons does not seem to
+                   be a viable explanation for the detection of gaseous
+                   NaCl at 220 R* from the central star, so instead, we
+                   propose shock-induced sputtering driven by localized
+                   mass ejection events as an alternative. Conclusions:
+                   The analysis of the NaCl lines demonstrates the
+                   capabilities of ALMA to decode the geometric
+                   morphologies and chemical pathways prevailing in the
+                   winds of evolved stars. These early ALMA results
+                   prove that the envelopes surrounding evolved stars
+                   are far from homogeneous, and that a variety of
+                   dynamical and chemical processes dictate the wind
+                   structure. The datacubes (FITS files) are only
+                   available at the CDS via anonymous ftp to
+                   http://cdsarc.u-strasbg.fr (http://130.79.128.5) or
+                   via
+                       http://cdsarc.u-strasbg.fr/viz-bin/qcat?J/A+A/592/A76},
+  doi =           {10.1051/0004-6361/201527934},
+  eid =           {A76},
+}
+
 @article{Chiang1997a,
   author =        {{Chiang}, E.~I. and {Goldreich}, P.},
   journal =       {\apj},
