--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -307,7 +307,8 @@ which were moderately high-mass evolved stars blowing off their envelopes.  The
 known detections include the carbon star envelope IRC +10216
 \citep{Cernicharo1987a,Agundez2012a}, the post-AGB star envelope CRL 2688
 \citep{Highberger2003a}, and the oxygen-rich evolved star envelopes of VY Canis
-Majoris and IK Tauri \citep{Milam2007a}. To our knowledge, \sourcei is only the
+Majoris and IK Tauri \citep{Milam2007a,Kaminski2013a}. To our knowledge,
+\sourcei is only the
 fifth astronomical source in which KCl and NaCl have been detected.
 The only previous detections of vibrationally excited NaCl were of the v=1
 line in IRC+10216 \citep{Quintana-Lacaci2016a} and VY CMa \citep{Decin2016a}, 
@@ -325,6 +326,7 @@ conditions in the \sourcei salt emission regions.
 % IK Tauri, VY Canis Majoris \citep{Milam2007a}
 
 \subsection{Where is the emission coming from?}
+\label{sec:wherefrom}
 In \sourcei, the salt lines originate from the surface layers of the disk (the Band 7
 lines exhibit NaCl emission peaks at $\pm0.032\arcsec=13$ AU above the disk),
 % \citet{Ginsburg2018b} showed that these species come only from the disk's
@@ -867,6 +869,22 @@ While plausible, there are many processes that need to coincide perfectly
 in this scenario (disk temperature history, gas density, gas-phase formation
 rates), so we favor the dust destruction hypothesis.
 
+
+\ag{Note: This section needs to be rewritten in light of this new information;
+this needs to be incorporated as an additional hypothesis.}
+\citet{Decin2016a} presented a model for the gas-phase abundance of
+NaCl in which it is thermally desorbed from grains at grain temperatures
+between 100 and 300 K, depending on the unknown binding energy of NaCl with
+the grain surface.  Since we expect grain temperatures $T>150$ K in the
+NaCl emission region (see Section \ref{sec:wherefrom}), this model hints
+that simple grain heating is enough to explain the high gas-phase abundances
+of NaCl observed.  Since NaCl is not observed within $r<30 AU$, though,
+it must be dissociated at smaller radii, which most likely requires
+a substantial UV field within that radius in the wavelength range
+$912 \mathrm{\AA} < \lambda < 3000 \mathrm{\AA}$ \citep{Silver1986a}.
+
+% However, the \citet{Decin1986a} model assumes that NaCl exists entirely
+% on the surface of the dust.  
 
 %(1) the dust is totally vaporized, so the salts are in the gas phase.  This is
 %pretty implausible, since it presumably requires temperatures >1000 K,
