Updates from ShareLaTeX

--- a/extracted.bib
+++ b/extracted.bib
@@ -1570,3 +1570,30 @@
                    interface.},
 }
 
+@ARTICLE{Silver1986,
+   author = {{Silver}, J.~A. and {Worsnop}, D.~R. and {Freedman}, A. and 
+	{Kolb}, C.~E.},
+    title = "{Absolute photodissociation cross sections of gas phase sodium chloride at room temperature}",
+  journal = {\jcp},
+ keywords = {Atmospheric Chemistry, Optical Measurement, Photodissociation, Room Temperature, Sodium Chlorides, Vapor Phases, Cross Sections, Excimer Lasers, Laser Applications, Photolysis, Stratosphere},
+     year = 1986,
+    month = apr,
+   volume = 84,
+    pages = {4378-4384},
+      doi = {10.1063/1.450060},
+   adsurl = {http://adsabs.harvard.edu/abs/1986JChPh..84.4378S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Zeiri1983,
+   author = {{Zeiri}, Y. and {Balint-Kurti}, G.~G.},
+    title = "{Theory of alkali halide photofragmentation: Potential energy curves and transition dipole moments}",
+  journal = {Journal of Molecular Spectroscopy},
+     year = 1983,
+    month = may,
+   volume = 99,
+    pages = {1-24},
+      doi = {10.1016/0022-2852(83)90288-6},
+   adsurl = {http://adsabs.harvard.edu/abs/1983JMoSp..99....1Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
