--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -601,12 +601,20 @@ with weak or ambiguous detections of NaCl in the v=7 and v=8 levels, and
 nondetections for $v > 9$.  Unless there is
 some selection effect in the electronic de-excitation disfavoring higher vibrational
 states, it is difficult to explain this cutoff.  
-Second, the binding energies of NaCl and KCl are only a few eV  \rlp{exact values here?}. 
-they may therefore be dissociated rather than excited by UV photons.
+Second, the lowest excited electronic energy levels for both NaCl and KCl are about
+5 eV above the ground state, very close to the photodissociation threshold for these
+molecules \citep{Zeiri1983, Silver1986}, which
+may therefore be dissociated rather than excited by UV photons.
 Third, there may not be any UV radiation in the outer disk where these lines
-are detected.  \sourcei has no electron-proton free-free emission
-\citep{Plambeck2013a}, so a strong $\lambda<912$ \AA\ UV field is ruled out.  While UV
-emission may be produced in shocks in the outflow, it is unclear whether
+are detected.  
+% since excitation requires only 5 eV, not 13.6 eV, lack of e-p free-free emission 
+% really isn't significant; in fact, 5000 K photosphere seen in reflection nebulosity 
+% could explain these photons?
+%\sourcei has no electron-proton free-free emission
+%\citep{Plambeck2013a}, so a strong $\lambda<912$ \AA\ UV field is ruled out. 
+While UV
+emission may be produced in shocks in the outflow \rlp{couldn't 5 eV photons come from 
+central 5000 K object?}, it is unclear whether
 it could penetrate into the disk where
 the salt emission is observed.  Even a light haze of dust in the upper layers of
 the disk would likely shield the molecules from such illumination.
@@ -839,11 +847,14 @@ grains or reacting and forming other molecules more rapidly than SiO.
 
 While NaCl and KCl are clearly detected here, there are also several transitions of
 AlCl and AlF in our observational bands that were not detected.
-\citet{Cernicharo1987a} detected these transitions at a comparable brightness to NaCl
+\citet{Cernicharo1987a} detected these transitions at comparable brightness to NaCl
 and KCl in IRC+10216.  The lack of AlCl may be because \sourcei's disk is
 oxygen-rich, and aluminum is locked into AlOH, as suggested in the
 \citet{Cherchneff2012a} model.  Indeed, the tentative detection of AlO
 in our spectra supports this conclusion.
+\rlp{Highberger et al 2003 note lack of AlCl toward CRL2688; but they remark
+on ubiquity of NaCN, which also is seen toward IRC10216; do we have nondetections
+of NaCN in our band?}
 
 
 We consider an alternative hypothesis: the salts are observed because they are
@@ -927,7 +938,10 @@ The ratio $^{35}$/$^{37}$Cl is $r=1.4\pm0.4$.  The KCl v=0 J=45-44 line
 gives a $^{35}/^{37}$Cl ratio $r=0.8$.  \citet{Agundez2012a} measured
 this ratio to be $r=2.9\pm0.3$ in IRC+10216.  Our measurement is somewhat lower,
 but should be regarded as consistent at least until we can obtain more
-accurate column density measurements.
+accurate column density measurements. \rlp{Highberger et al 2003 found 35/37 Cl
+ratio of 2.1 +/- 0.8 in CRL 2688, suggest it might indicate s-process enhancement
+of 37Cl (kind of silly, since their measurement uncertainties are consistent
+with solar ratio of 3.1} 
 
 We only have one commonly observed $^{41}$KCl / $^{39}$KCl line, v=0 J=13-12,
 which has a ratio $^{39}/^{41}$ $r=2.4$.  \ag{Have there been any measurements
