--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -384,13 +384,13 @@ molecules' emission patterns is driven partly by excitation, since the salt
 lines have upper state energy levels intermediate between the SiO v=0 and v=5
 states and trace an intermediate region.
 
-\bam{This reads
-as a result, not as discussion, as there's no conclusion drawn here.  What does
-this result tell us?  Seems like we're saying that the production method for
-SiO and NaCl/KCl probably aren't the same - they aren't co-located, so it's
-probably not shock/outflow-induced for NaCl/KCl?  This runs contrary to what is
-said later on in the discussion, however.}
-\ag{Added a conclusion.}
+% \bam{This reads
+% as a result, not as discussion, as there's no conclusion drawn here.  What does
+% this result tell us?  Seems like we're saying that the production method for
+% SiO and NaCl/KCl probably aren't the same - they aren't co-located, so it's
+% probably not shock/outflow-induced for NaCl/KCl?  This runs contrary to what is
+% said later on in the discussion, however.}
+% \ag{Added a conclusion.}
 
 
 \begin{figure*}[!htp]
