--- a/science.tex
+++ b/science.tex
@@ -12,6 +12,8 @@
 \usepackage{xspace}
 
 \usepackage{times}
+\usepackage{graphicx}
+
 
 % The preamble here sets up a lot of new/revised commands and
 % environments.  It's annoying, but please do *not* try to strip these
@@ -229,6 +231,17 @@ spectrum to measure and  identify the emission lines (see Methods).
 % parenthetical may be techincally wrong, though?} % nope, it's (to first
 % order) right, that's good
 
+\begin{figure*}[!htp]
+\includegraphics[scale=1,width=4in]{figures/SiO_8-7_on_NaClv=2_26-25.pdf}
+\caption{Peak intensity map of SiO v=0 J=8-7 (gray scale), NaCl v=2 J=26-25
+(red contour; 200 K) and {SiO v=5 J=8-7} (blue contours; 300, 400, 500, and 600
+K).  The blue contours in the upper-left come from a blend with a different
+line.
+}
+\label{fig:sioonnacl}
+\end{figure*}
+
+
 While the most prominent spectral features were the SiO and \water lines that
 have previously been observed \cite{Goddi2013a,Hirota2014a}, there were dozens
 of lines that remained unidentified in our initial study \cite{Ginsburg2018b}.
@@ -268,7 +281,7 @@ source, and therefore demonstrated that there is no ionized gas around Source I
 \cite{Plambeck2016a,Baez-Rubio2018a}, we reject the atomic formation route. We
 therefore suggest that the salts are produced by dust destruction, either
 via sputtering by high-energy particles \cite{Schilke1997a} or by thermal
-desorption of the outer dust layers \citep{Decin2016a}.  The small scale
+desorption of the outer dust layers \cite{Decin2016a}.  The small scale
 height of the observed salt emission therefore implies that grain destruction
 is an efficient and rapid process in disk-launched winds.
 
@@ -289,21 +302,48 @@ radii where salts are observed, it is plausible that strong radiation from the
 disk in the mid-infrared is responsible for exciting the molecules.  However,
 we have not been able to assemble a self-consistent model explaining both the
 rotational and vibrational excitation ladders of NaCl or KCl.  In the
-supplemental material, we describe  and evaluate several other possible
+supplemental material, we describe  and evaluate several possible
 excitation mechanisms that are less likely but not ruled out.
 
-The detection of NaCl and KCl in our current dataset was serendipitous.  As a
-result, the observations were not optimized for unraveling the physical and
-chemical conditions underlying their presence and excitation, hindering our
-ability to obtain a full picture of the exact utility of these salts as
-tracers.  Nevertheless, we obtain several important conclusions from these
-detections.  First and foremost, these molecular lines uniquely trace the disk
-around a massive protostar, suggesting they may be an unambiguous and universal
-tracer of high-mass protostellar disks. Second, since these molecules contain
-atoms rarely seen in the molecular ISM because they are trapped in dust, they
-may serve as a tool for directly measuring absolute metallicity in an
-environment that is typically far too chemically complex and obscured for other
-methods to work.
+\begin{figure}
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B3_spw1_robust0.5}.pdf}
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B6_spw1_robust0.5}.pdf}
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_a_OrionSourceI_B7.lb_spw1_robust0.5}.pdf}
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B3_spw3_robust0.5}.pdf}
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B6_spw3_robust0.5}.pdf}
+    \includegraphics[scale=1,width=3.0in]{{figures/squash_lte_overlay_K_b_OrionSourceI_B7.lb_spw3_robust0.5}.pdf}
+    \label{fig:spectra}
+    \caption{Spectra with NaCl (green) and KCl (red) models overlaid}
+\end{figure}
+
+
+% The detection of NaCl and KCl in our current dataset was serendipitous.  As a
+% result, the observations were not optimized for unraveling the physical and
+% chemical conditions underlying their presence and excitation, hindering our
+% ability to obtain a full picture of the exact utility of these salts as
+% tracers.  Nevertheless, we obtain several important conclusions from these
+% detections.
+
+We conclude that these newly detected transitions uniquely trace the disk
+around a massive protostar.  Since they appear to be an unambiguous tracer of
+high-mass protostellar disks, if they behave the same in other high-mass disks,
+they will facilitate kinematic measurements of disks and therefore direct mass
+measurements of the contained stars.  Access to such a tool would finally make
+direct comparisons between high- and low-mass star formation possible.
+
+Since these molecules contain atoms usually trapped in dust and therefore
+rarely seen in the molecular ISM, they may serve as a tool for directly
+measuring absolute metallicity in an environment that is typically far too
+chemically complex and obscured for other methods to work.  Since these
+species are released into the ISM only by supernovae, these transitions
+could prove a powerful probe of supernova feedback in high-extinction
+regions. % this is pretty far-fetched...
+
+% Of these species,
+% Na is produced only in massive star supernovae, while K and Cl are produced in
+% white dwarf supernovae  <-- I don't know if this is true.  cosmic-origins.org +
+% wikipedia say so, but those are loose.  Arnett '96 doesn't seem to have a table
+% of "this comes from here".
 
 %This last paragraph should probably be two or three instead of one?  Note that
 %we explicitly cannot include any 'forward-looking' projects that *we plan*
